test/spec_vectors/simd_int_to_int_extend/fail/module_1.wat
(module (func (result v128) (i16x8.extend_high_i8x16_s (i32.const 0))))